--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    text-align: center;
+    justify-content: center;
+    background: rgb(226, 85, 28);
+}
